@@ -37,6 +37,7 @@
 -- fixed binder[2] = { { when = { }, user = { } } } (extra { })
 -- fixed static flush points
 -- added stream_tcp.segs_split peg
+-- fixed RangeCheck
 
 126
 -- pulled latest from tom
